--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10,7 +10,11 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 article,
 aside,
