--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -12,6 +12,8 @@ body {
     height: 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 body {
