--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -10,10 +10,6 @@ html,
 body {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
 }
 
 body {
@@ -159,7 +155,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg-toronto.jpg) no-repeat center center scroll;
+    background: url(../img/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -243,7 +239,7 @@ hr.small {
 /* Footer */
 
 footer {
-    padding: 40px 0;
+    padding: 100px 0;
 }
 
 #to-top {
