--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1147,7 +1147,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #abd4f9;
 }
 .sr-only {
   position: absolute;
